# abena-ihr-backup

./: +==================================.md  +==================================.txt  .cursorrules  .gitattributes  .gitignore  ===================================.txt  ABENA BLOCKCHAIN STATUS.sql  ABENA CLINICAL DATA.sql  ABENA IHR.sql  ABENA PATIENT DATABASE.sql  ABENA-Windows-EnvSetup.md  ABENA_BRAND_COLORS.md  ABENA_CHANGES_LOG.md  ABENA_CLINICAL_DATA.sql  ABENA_SYSTEM_COMPREHENSIVE_ANALYSIS.md  ABENA_SYSTEM_CONNECTIONS.md  ABENA_SYSTEM_PORTS_DOCUMENTATION.md  ALL_DASHBOARD_URLS.md  ARCHITECTURE.md  Abena Blockchain.code-workspace  BACKUP_MANIFEST.md  BACKUP_STATUS.md  BUILD_CONTINUATION.md  BUILD_ISSUE_SUMMARY.md  BUILD_PROGRESS.md  BUILD_STATUS.md  BUILD_STATUS_FINAL.md  BUILD_STATUS_UPDATE.md  CLI_SETUP_COMPLETE.md  COMPLETE_SECURITY_INTEGRATION.ps1  COMPLETE_SECURITY_INTEGRATION_CLEAN.ps1  COMPREHENSIVE_FOLDER_ANALYSIS.md  CURRENT_STATUS.md  Cargo.toml  DATABASE_MIGRATION_GUIDE.md  DELIVERY_SUMMARY.md  DEMO_GUIDE.md  DEMO_INTEGRATION_STATUS.md  DEMO_URLS_QUICK_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  (+130 more)
.cargo/: config.toml
12 Core Background Modules/: Dockerfile  health-server.cjs  package.json
Complete UI system p layer/: Dockerfile  presentation_layer.py  requirements.txt  run.py
IBM_Quantum_Application/: Application_Checklist.txt  IBM _hardware_Val_report.txt  IBM_Application_Responses.txt  IBM_Quantum_Hardware_Validation_Report.txt  Job_Details.txt  abena_6qubit_vqe_hardware.py  abena_quantum_hardware_test.py
Telemedicine platform/: Dockerfile  README.md  WEARABLE_API.md  nginx.conf  package-lock.json  package.json
abena_biomaker_integration/: Dockerfile  package.json  server.js
abena_ecBome_intelligence_sys/: package.json
abena_ecdome_intelligence_sys/: Dockerfile  server.js
abena_ihr/: Dockerfile  EMAIL_SETUP.md  README.md  SECURITY_UPDATE_INSTRUCTIONS.txt  docker-compose.yml  env.example  health_server.py  requirements.txt  setup_provider_hours.py
abena_unified_integration/: Dockerfile  package.json  server.js
admin-dashboard/: Dockerfile  package.json  server.js
admin-dashboard-nextjs/: .env.example  ADMIN_FEATURES_PLAN.md  ADMIN_PORTAL_ACCESS.md  ADMIN_PORTAL_MVP_SUMMARY.md  BRANDING_AND_LOGOUT_FIXED.md  BRANDING_UPDATED.md  BUILD_FIX.md  Dockerfile  FINAL_PORT_SETUP.md  FIX_404_ERROR.md  FIX_ADMIN_ROUTE.md  FIX_CANNOT_GET_ERROR.md  FIX_PORT_3002_IN_USE.md  FIX_PORT_CONFLICT.md  PORT_CONFLICT_FIX.md  PORT_FIXED.md  QUANTUM_ANALYSIS_ARCHITECTURE.md  QUANTUM_ANALYSIS_COMMAND_CENTER.md  QUICK_FIX_ADMIN.md  START_ADMIN_PORTAL.md  START_QUANTUM_API.md  TROUBLESHOOT_WRONG_CONTENT.md  USE_PORT_3010.md  WEEK_6_MULTI_USER_SETUP.md  WEEK_6_PROGRESS.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
anonymization/: Cargo.toml
anonymization/src/: lib.rs
api_gateway/: API KEY.rtf  Dockerfile.gateway  Dockerfile.registry  abena_sdk.js  deployment-guide.md  integration-bridge-server.js  integration-example.js  integration-gateway.yml  module-api-standard.md  module-registry.js  nginx.conf  package.json
auth-service/: package.json  server.js
build-fix/: Cargo.toml
cli/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts  main.rs
cli/src/commands/: backup.ts  deploy.ts  join-network.ts  restore.ts  status.ts
clinical-modules/: README.md
connectors/: README.md  package-lock.json  package.json
connectors/python/abena_epic_connector/: README.md  pyproject.toml
connectors/python/abena_epic_connector/abena_epic_connector/: __init__.py  abena_client.py  bridge.py  epic_client.py
connectors/python/abena_epic_connector/abena_epic_connector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
database/: __init__.py  db_client.py  schema.sql
demo-orchestrator/: Dockerfile  package-lock.json  package.json  server.js
docs/: ABENA-CLI-AND-EHR-DESIGN.md  ABENA_PALLETS_OVERVIEW.md  BLOCKCHAIN_COMPONENTS_CHECKLIST.md  PALLET_READINESS.md  QUANTUM_RESULTS_OFFCHAIN_WORKER.md  validation-status.html
infrastructure and deployment configuration/: README.md  docker-compose.production.yml  nginx.conf  sdk-config.yaml  sdk.env.example
node/: Cargo.toml  Cargo.toml.server-backup  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/abena-fee-abstraction/: Cargo.toml
pallets/abena-fee-abstraction/src/: lib.rs  weights.rs
pallets/abena-modules/: Cargo.toml
pallets/abena-modules/src/: lib.rs
pallets/abena-rewards/: Cargo.toml
pallets/abena-rewards/src/: lib.rs
pallets/consortium-governance/: Cargo.toml
pallets/consortium-governance/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
pallets/data-marketplace-disabled/: Cargo.toml
pallets/data-marketplace-disabled/src/: anonymization.rs  benchmarking.rs  lib.rs  mock.rs  privacy.rs  tests.rs
pallets/interoperability/: Cargo.toml
pallets/interoperability/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
patches/: block-builder
patches/fflonk/: Cargo.toml
patches/fflonk/src/: lib.rs
patches/ring/: Cargo.toml
patches/ring/src/: lib.rs
patches/sc-network/light/: Cargo.toml
provider_workflow_integrations/: Dockerfile  package.json  server.js
runtime/: Cargo.toml  build.rs
runtime/src/: constants.rs  lib.rs  lib.rs.clean  lib.rs.save  lib.rs.save.1  weights.rs
runtime/tests/: integration_tests.rs
scripts/: apply-sc-network-enum-fix.py  build.sh  deploy-digitalocean.sh  fix-enum-in-cargo-cache.sh  fix-patch-paths.sh  fix-sc-network-enum-inline.sh  fix-sc-network-enum.sh  fix-sp-io-no-mangle.sh  insert-keys.sh  run-testnet.sh  setup-and-build.ps1  setup-and-build.sh  setup-sc-network-patch.sh  setup-sc-network-patch.sh.bak
sdk/: package.json
security-package/: .env.example  IMPLEMENTATION_GUIDE.md  PACKAGE_SUMMARY.md  QUICK_START.md  README.md  requirements.txt
server-config/: abena-node.service  abena-testnet.json  nginx-abena-testnet.conf
services/fhir-api/: Cargo.toml  README.md
services/fhir-api/src/: main.rs
(+1173 files in other folders)
