[workspace]
resolver = "2"
members = [
    "node",
    "runtime",
    "pallets/abena-rewards",
    "pallets/abena-fee-abstraction",
]

[workspace.package]
authors = ["DK Technologies, Inc."]
edition = "2021"
repository = "https://github.com/janicemvk/abena-ihr-backup"
license = "Unlicense"
homepage = "https://abenihr.com"

[profile.release]
# Runtime WASM needs panic = abort for no_std
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

# ─── Fix for the enum index bug you've been hitting ───────────────────────────
# This locks codec to a known-good version that doesn't conflict
# with Substrate's internal enum encoding.
[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }
scale-info = { version = "2.10.0", features = ["derive"] }
