[workspace]
resolver = "2"
members = [
    "node",
    "runtime",
    "pallets/abena-rewards",
    "pallets/abena-fee-abstraction",
]

[workspace.lints]
rust = {}

[workspace.package]
authors = ["DK Technologies, Inc."]
edition = "2021"
repository = "https://github.com/janicemvk/abena-ihr-backup"
license = "Unlicense"
homepage = "https://abenihr.com"

[profile.release]
# Runtime WASM needs panic = abort for no_std
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

# ─── Patches for Rust / toolchain compatibility ────────────────────────────────
# Note: cid v0.11.1 git patch does NOT replace cid 0.9.0 in the graph (semver).
# Force `std` on cid 0.9.0 via node/Cargo.toml so multihash 0.17 + rustc agree on io::Read.
[patch.crates-io]
# ar_archive_writer 0.5.x needs Rust 1.87+; pin to 0.4.0 for Rust 1.86
ar_archive_writer = { git = "https://github.com/rust-lang/ar_archive_writer", tag = "v0.4.0" }

# ─── Fix sc-network duplicate codec index (Consensus & RemoteCallResponse both = 6) ─
# Patched sc-network must exist at patches/sc-network (see docs or fix-enum-conflict.ps1)
[patch."https://github.com/paritytech/polkadot-sdk"]
sc-network = { path = "patches/sc-network" }

# ─── Fix for the enum index bug you've been hitting ───────────────────────────
# This locks codec to a known-good version that doesn't conflict
# with Substrate's internal enum encoding.
[workspace.dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }
scale-info = { version = "2.10.0", features = ["derive"] }
# Required by patched sc-network sub-crates (sc-network-light etc.)
array-bytes = { version = "6.2.2", default-features = false }
async-channel = { version = "1.8.0" }
futures = { version = "0.3.30" }
log = { version = "0.4.21", default-features = false }
prost = { version = "0.12.4" }
prost-build = { version = "0.12.4" }
thiserror = { version = "1.0.48" }
async-trait = { version = "0.1.79" }
# SDK crates for sc-network-light (use tag matching your SDK)
sc-block-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sc-network = { path = "patches/sc-network", default-features = false }
sc-network-light = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sc-network-types = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
# Additional deps for sc-network sub-crates (sync, common, etc.)
bitflags = { version = "1.3.2" }
bs58 = { version = "0.5.0", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false }
futures-timer = { version = "3.0.2" }
libp2p = { version = "0.52.4" }
libp2p-identity = { version = "0.2.3" }
litep2p = { version = "0.6.2" }
mockall = { version = "0.11.3" }
parking_lot = { version = "0.12.1", default-features = false }
quickcheck = { version = "1.0" }
rand = { version = "0.8.5", default-features = false }
schnellru = { version = "0.2.1" }
smallvec = { version = "1.11.0", default-features = false }
tempfile = { version = "3.8.1" }
time = { version = "0.3" }
tokio = { version = "1.37.0", default-features = false }
tokio-stream = { version = "0.1.14" }
toml = { version = "0.8.8" }
zeroize = { version = "1.7.0", default-features = false }
# SDK path deps (as git for external use)
fork-tree = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false, package = "substrate-prometheus-endpoint" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-statement-store = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-stable2407", default-features = false }
