[package]
name = "abena-anonymization"
version = "4.0.0-dev"
description = "ABENA k-anonymity and anonymization utilities for off-chain data preparation"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

[dev-dependencies]

[features]
default = ["std"]
std = []
